<?xml version="1.0" encoding="utf-8"?><!--
  ~ This file is part of Prepay Credit for Android
  ~
  ~ Copyright © 2013  Damien O'Reilly
  ~
  ~ Prepay Credit for Android is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ Prepay Credit for Android is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with Prepay Credit for Android.  If not, see <http://www.gnu.org/licenses/>.
  ~
  ~ Report bugs or new features at: https://github.com/DamienOReilly/PrepayCredit
  ~ Contact the author at:          damienreilly@gmail.com
  -->

<resources>
    <!-- ACRA specific -->
    <string name="crash_toast_text">Oops! Prepay Credit has crashed!</string>
    <string name="crash_dialog_title">Prepay Credit crashed</string>
    <string name="crash_dialog_text">An unexpected error occurred forcing the
        application to stop. Please help me fix this by sending me an error report.
        All you have to do is click OK.
    </string>

    <!-- My3 app -->
    <string name="app_name">Prepay Credit</string>
    <string name="settings">Settings</string>
    <string name="refresh">Refresh</string>
    <string name="crash_dialog_comment_prompt">You can add any further information you may want below:</string>
    <string name="crash_dialog_ok_toast">Cheers !</string>
    <string name="internet_addon_expiring_title">Internet add-on expiring!</string>
    <string name="internet_addon_expired_title">Internet add-on expired!</string>
    <string name="internet_addon_expiring_text">Your internet add-on is about to expire…</string>
    <string name="internet_addon_expired_text">Your internet add-on has expired!</string>
    <string name="ok">OK</string>
    <string name="my3">Goto My3</string>
    <string name="about">About</string>
    <string name="changelog">Change Log</string>
    <string name="about_version">Version:</string>
    <string name="about_activity_title">About Prepay Credit</string>
    <string name="my3_website">My3 website</string>
    <string name="out_of_bundle_container_label">Out of bundle charges!</string>
    <string name="no_account_credentials">No username or password configured. Please enter a name and password in settings.</string>
    <string name="my3_connection_error">There was a problem connecting to My3 website.\n\n%1$s\n\nClick to open My3 in your browser…</string>
    <string name="mobile_number">Mobile number</string>
    <string name="password">My3 password</string>
    <string name="continue_button">Continue</string>
    <string name="forgot_password_label">Forgot password?</string>
    <string name="register_label">Register</string>
    <string name="login_field_validation_error">This field must be filled in.</string>
    <string name="sim_iccid">Last 6 digits of SIM: %1$s</string>
    <string name="sim_iccid_desc">Last 6 digits of SIM</string>
    <string name="clipboard">Copied to clipboard</string>
    <string name="close">close</string>
    <string name="internet_expiring_summary">According to your last refresh on: %1$s, your latest internet add-on is due to expire at midnight tonight.\n\nNote, if you topped-up or bought an add-on since your last refresh, this information may no longer be relevant.</string>
    <string name="internet_expired_summary">According to your last refresh on: %1$s, your latest internet add-on has EXPIRED.\n\nIf you topped-up or bought an add-on since your last refresh, this information may no longer be relevant.</string>
    <string name="backgroundupdate">backgroundupdate</string>
    <string name="logout">Logout</string>

</resources>